# collatz-visualization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: collatz.cpp  collatz.h
